# todoList

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRODUCT.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.test.ts  vite.config.ts
.github/workflows/: deploy-pages.yml  release.yml
docs/superpowers/plans/: 2026-05-15-frontend-features.md  2026-05-15-release-engineering.md  2026-05-15-tauri-integration.md
docs/superpowers/specs/: 2026-05-15-mvp-v1-design.md
scripts/: verify-windows-installed-app.ps1
src/: App.test.tsx  App.tsx  defaults.ts  image.ts  storage.ts  styles.css  styles.test.ts  tauriConfig.test.ts  tauriWindow.test.ts  tauriWindow.ts  test-setup.ts  types.ts  windowsSmokeScript.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
